<?xml version="1.0"?>
<package format="2">
    <name>context_msgs</name>
    <version>2.0.0</version>
    <description>The context_msgs package</description>

    <author email="chenzilong@yijiahe.com">Zilong Chen</author>
    <maintainer email="chenzilong@yijiahe.com">Zilong Chen</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>
