<?xml version="1.0"?>
<package format="2">
  <name>libevent_server_test</name>
  <version>2.0.0</version>
  <description>The context package</description>

  <author email="chenzilong@yijiahe.com">Zilong Chen</author>
  <maintainer email="chenzilong@yijiahe.com">Zilong Chen</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>context_msgs</depend>

  <depend>actionlib</depend>
<!--  <depend>common_rosdeps</depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
